# 0dMIPS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.macros  README.md  fullmachine.v  fullmachine_tb.v  mips_define.v  objdump2dat.py  rom.v  runAllTests.sh
.github/workflows/: codecov.yml  static.yml
D_flip_flop/: D_flip_flop.v  D_flip_flop_tb.v  Makefile
alu/: Makefile  alu.v  alu_tb.v
barrel_shifter/: Makefile  barrel_shifter.v  barrel_shifter_tb.v
boards/xc7a100tfgg484-2/: .gitignore  DaVinci_Pro_PIN.xdc  Debug.xdc  Floorplan.xdc  clk_wiz_0.xci  generate_vivado_project.py  readme.md
cp0/: Makefile  cp0.v  cp0_tb.v
debugger_tui/: CMakeLists.txt  tui.cpp
docs/: .gitignore  ISA.md  export_schematics.tcl  gen_export_schematics_site.py
docs/diagram/: EX.typ  ID.typ  IF.typ  diagram.typ
docs/diagram/circuiteria/src/: circuit.typ  element.typ  wire.typ
docs/diagram/circuiteria/src/elements/: alu.typ  block.typ  concatenation.typ  element.typ  extender.typ  group.typ  multiplexer.typ  ports.typ
docs/diagram/circuiteria/src/elements/logic/: and.typ  buf.typ  gate.typ  or.typ  xor.typ
docs/schematic_html/: TOP.html  adder.html  alu.html  au.html  barrel_rotator32.html  barrel_rotator32__parameterized0.html  barrel_rotator_right.html  barrel_rotator_right__parameterized0.html  barrel_shifter32.html  barrel_shifter_left.html  barrel_shifter_left__parameterized0.html  barrel_shifter_right.html  cache_arbiter.html  core.html  core_EX.html  core_ID.html  core_IF.html  core_MEM.html  core_branch.html  core_forward.html  core_hazard.html  cp0.html  lu.html  mips_decoder.html  mux2v.html  mux2v__parameterized0.html  mux2v__parameterized1.html  mux2v__parameterized2.html  mux2v__parameterized3.html  mux2v__parameterized4.html  mux3v.html  mux4v.html  mux4v__parameterized0.html  mux4v__parameterized1.html  mux4v__parameterized2.html  mux4v__parameterized3.html  regfile.html  register.html  register__parameterized0.html  register__parameterized1.html  (+5 more)
example_asm/: .gitignore  CMakeLists.txt  Makefile  b.s  cycle_counter.c  cycle_counter.s  fabonacci.c  fabonacci.s  fabonacci_c.c  fibonacci.c  header.h  hello_world.c  optnone.h  script.ld  stdout.s  test_read_write.s
fullmachine_basic/: Makefile  fullmachine.v  fullmachine_tb.v
mips_decoder/: ISA.md  Makefile  mips_decoder.v  mips_define.v
mux/: Makefile  mux.v
register/: Makefile  regfile_tb.v  register.v  register_tb.v
rom/: rom.v
scripts/: cloneGoogleTest.sh  install_mips64el_musl.sh  objdump2dat.py
simulations/: CMakeLists.txt  Makefile  SOC_VGA_sim.cpp  SOC_debug.cpp  SOC_run_sim.cpp  SOC_sim.cpp  SOC_utils.hpp  VGA_sim.cpp  common.cpp  common.hpp  core.cpp  core_sim.cpp  debugger_tui.cpp  full_machine.cpp
src/: SOC.sv
src/modules/: D_flip_flop.sv  adder.sv  barrel_shifter32.sv  configurations.sv  core_branch.sv  core_branch_predictor.sv  core_forward.sv  core_hazard.sv  data_mem.sv  mips_decoder.sv  mips_define.sv  mux.sv  register.sv  structures.sv
src/units/: VGA.sv  alu.sv  au.sv  cache_L1.sv  cache_arbiter.sv  core.sv  core_EX.sv  core_ID.sv  core_IF.sv  core_MEM.sv  core_WB.sv  cp0.sv  full_machine.sv  lu.sv  regfile.sv  stdout.sv  timer.sv
tests/: CMakeLists.txt  alu_test.cpp  cache_L1_helper.hpp  cache_L1_test.cpp  cache_arbiter_test.cpp  cache_test.hpp  common.hpp  core_test.cpp  core_test.hpp  core_test_bp.cpp  core_test_comb.cpp  core_test_inst.cpp  cp0_test.cpp  test.cpp  timer_test.cpp
timer/: Makefile  timer.v  timer_tb.v
